Fix footer spacing for closure form

--- a/src/styles/leo-provider-app.styl
+++ b/src/styles/leo-provider-app.styl
@@ -91,6 +91,11 @@
 
   #message-form .panel-body { padding-bottom: 10px; }
 
+  #close-form {
+    padding-bottom: 30px;
+    margin-bottom: 49px;
+  }
+
   /*Tab styling*/
   .tags-container { width: 24%; }
 
